Add project description

--- a/Tweet Data Wrangling/wrangle_act.ipynb
+++ b/Tweet Data Wrangling/wrangle_act.ipynb
@@ -10,18 +10,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Gathering"
+    "> The notebook wrangles the twitter archive of WeRateDogs.\n",
+    "\n",
+    "> WeRateDogs is a popular twitter channel that rates people's dogs on a scale of 10. They are known for their unique rating system wherein some dogs get rated on a scale higher than 10.\n",
+    "\n",
+    "\n",
+    "> The wrangling process is divided into the following parts:\n",
+    ">                                                                        \n",
+    "    1. Gathering \n",
+    "    2. Assesing  \n",
+    "    3. Cleaning  \n",
+    "    4. Storing  \n",
+    "    5. Analysis  \n",
+    "    6. Visualization  \n",
+    "    "
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "## Gathering`"
+   ]
   },
   {
    "cell_type": "code",
