Add wrangling report

--- a/Tweet Data Wrangling/wrangle_act.ipynb
+++ b/Tweet Data Wrangling/wrangle_act.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,15 +81,6 @@
    "metadata": {},
    "source": [
     "### Twitter Archive Enhanced"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The file contains the tweet information of WeRateDogs up until 2017.The text field of the file has been used to extract some additional information such as the name of the dog considered and the the stage of the dog hence the name twitter-archive-enhanced.\n",
-    "\n",
-    "Since the file is given to us, we just have to load it onto our workspace."
    ]
   },
   {
@@ -340,15 +331,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The images from the tweets of WeRateDogs was run through a neural network that classified breed of dogs. The image_predictions.tsv file contains the predictions from the neural network.\n",
-    "\n",
-    "The file is stored on Udacity's servers. We would be using the requests library to extract the file from the servers."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Extract & Store"
    ]
   },
@@ -476,19 +458,6 @@
    "metadata": {},
    "source": [
     "### Tweet Attributes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "→ Since the twitter-archive-enhanced dataset is missing the retweet_count & favorite_count of tweets, we will be extracting the same by quering twitter's API with the tweet_id's of the tweets.\n",
-    "\n",
-    "→ We will use python's tweepy library to interact with twitter's API and extract the required information. Since some tweets would be deleted from the the time the twitter_archive_enhanced dataset was prepared, some of of queries would fail.\n",
-    "\n",
-    "→ We will store the info extracted from the successful queries and store it in a json file called tweet_attrs.\n",
-    "\n",
-    "→ As we woud be catching the failed queries, the tweet_id's associated with them would be stored in a separate csv file  called deleted_tweets"
    ]
   },
   {
@@ -8050,21 +8019,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Summary "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "##  Assessing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Description"
    ]
   },
   {
@@ -8076,7 +8031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8100,7 +8055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8123,16 +8078,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Objective and approach\n",
-    "\n",
-    "Checking for accuracy and consistency"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Displays"
+    "#### Displays : Checking for accuracy and consistency issues"
    ]
   },
   {
@@ -11454,7 +11400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Name view"
+    "#### Dog name view"
    ]
   },
   {
@@ -11479,7 +11425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Stage view"
+    "#### Dog stage view"
    ]
   },
   {
@@ -11557,13 +11503,6 @@
    "metadata": {},
    "source": [
     "### Programmatic assesment"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Objective & approach"
    ]
   },
   {
@@ -12047,7 +11986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12067,7 +12006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
@@ -12116,7 +12055,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 387,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12152,7 +12091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12170,7 +12109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [
     {
@@ -12179,7 +12118,7 @@
        "datetime64[ns, UTC]"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 389,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12213,7 +12152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12232,7 +12171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
@@ -12272,7 +12211,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 391,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12283,7 +12222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 392,
    "metadata": {
     "scrolled": true
    },
@@ -12325,7 +12264,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 392,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12354,7 +12293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12382,7 +12321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 394,
    "metadata": {
     "scrolled": false
    },
@@ -12397,7 +12336,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 394,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12433,7 +12372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12455,7 +12394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 396,
    "metadata": {
     "scrolled": true
    },
@@ -12506,7 +12445,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 396,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12535,7 +12474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12556,7 +12495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [
     {
@@ -12593,7 +12532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12615,7 +12554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [
     {
@@ -12652,7 +12591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12677,7 +12616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [
     {
@@ -12717,7 +12656,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 402,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12741,10 +12680,10 @@
     "\n",
     "*Define*\n",
     "\n",
-    "1. Use pandas' melt function on the subset of columns representing dog stages.\n",
-    "2. Use the resulting dataframe to extract the value of dog stages.  \n",
-    "3. Store the values as one master dataframe or series\n",
-    "4. Join the series to twitter_archive_enhanced"
+    "1. Create a null column called dog_stage.\n",
+    "2. Set rows which hold value True for two or more columns to null. \n",
+    "3. For indices that hold the value True for any of the dog stages: set the dog_stage columns value to that dog stage.\n",
+    "4. Drop the four columns that represent dog_stages.\n"
    ]
   },
   {
@@ -12756,25 +12695,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 408,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dog_stages = twitter_archive_enhanced_.loc[:,['tweet_id','doggo','floofer','pupper','puppo']]\n",
+    "\n",
+    "twitter_archive_enhanced_['dog_stage'] = np.nan\n",
+    "\n",
+    "twitter_archive_enhanced_.loc[(twitter_archive_enhanced_.doggo == True) & (twitter_archive_enhanced_.pupper == True),\n",
+    "                              'dog_stage'] = np.nan\n",
+    "\n",
+    "twitter_archive_enhanced_.loc[(twitter_archive_enhanced_.doggo == True) & (twitter_archive_enhanced_.floofer == True),\n",
+    "                              'dog_stage'] = np.nan\n",
+    "\n",
+    "\n",
+    "twitter_archive_enhanced_.loc[twitter_archive_enhanced_.doggo == True, 'dog_stage'] = 'doggo'\n",
+    "twitter_archive_enhanced_.loc[twitter_archive_enhanced_.floofer == True, 'dog_stage'] = 'floofer'\n",
+    "twitter_archive_enhanced_.loc[twitter_archive_enhanced_.pupper == True, 'dog_stage'] = 'pupper'\n",
+    "twitter_archive_enhanced_.loc[twitter_archive_enhanced_.puppo == True, 'dog_stage'] = 'puppo'\n",
+    "_\n",
+    "twitter_archive_enhanced_.drop(['doggo','floofer','pupper','puppo'], axis = 1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 382,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Nishant\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:4163: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  return super().drop(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dog_stages = twitter_archive_enhanced_[['tweet_id','doggo','floofer','pupper','puppo']]\n",
+    "dog_stages = twitter_archive_enhanced_.loc[:,['tweet_id','doggo','floofer','pupper','puppo']]\n",
+    "\n",
     "dog_stages.set_index('tweet_id', inplace = True)\n",
     "dog_stages.value_counts()\n",
     "\n",
@@ -12814,7 +12767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [
     {
@@ -12860,7 +12813,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 412,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13091,7 +13044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13117,7 +13070,7 @@
     "\n",
     "\"\"\"\n",
     "                     The sript below stores all the cleaned datasets in a directory called \n",
-    "                     dataset_files. And inside it: a sub-directory called submission_files,\n",
+    "                     cleaned_dataset_files. And inside it: a sub-directory called submission_files,\n",
     "                     which contains the master dataframe called twitter_archive_master \n",
     "                     along with other dataframes that were created for the purpose of\n",
     "                     tidiness.\n",
@@ -13190,7 +13143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13227,7 +13180,9 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -13280,6 +13235,13 @@
    ],
    "source": [
     "pd.DataFrame(dog_stage_info.dog_stage.value_counts()).T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As observed from the above table, the most tweeted dog_stage is **pupper**."
    ]
   },
   {
@@ -13369,12 +13331,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Popularity trend of WeRateDogs"
+    "From the above table, we infer WeRateDogs' tweets are **retweeted 2426 times** on average, and **favorited 7474 times** on average. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Popularity peaks of WeRateDogs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -13394,7 +13363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13418,8 +13387,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -13459,6 +13430,16 @@
     "sns.despine()\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Insights:\n",
+    "\n",
+    "1. The metric favorite_count had peaked in the second quarter of 2017.\n",
+    "2. The metric retweet_count had peaked in the fourth quarter of 2016."
    ]
   }
  ],
