Add analysis report

--- a/Tweet Data Wrangling/wrangle_act.ipynb
+++ b/Tweet Data Wrangling/wrangle_act.ipynb
@@ -13438,8 +13438,8 @@
    "source": [
     "Insights:\n",
     "\n",
-    "1. The metric favorite_count had peaked in the second quarter of 2017.\n",
-    "2. The metric retweet_count had peaked in the fourth quarter of 2016."
+    "1. The metric: `favorite_count` had peaked in the second quarter of 2017.\n",
+    "2. The metric: `retweet_count` had peaked in the fourth quarter of 2016."
    ]
   }
  ],
